--- a/templates/login.html
+++ b/templates/login.html
@@ -26,7 +26,7 @@
 <body>
 
 <div class="container">
-    <h2 class="text-center">Sign Up</h2>
+    <h2 class="text-center">Sign In</h2>
     <form id="signup-form" action="/login" method="post">
         <div class="form-group">
             <input type="email" name="email" class="form-control" id="email" placeholder="Email" required>
